jupyter notebook comments

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# inspect columns in measurement table\n",
     "inspector = inspect(engine)\n",
     "columns = inspector.get_columns('measurement')\n",
     "for c in columns:\n",
@@ -326,6 +326,8 @@
     }
    ],
    "source": [
+    "# inspect station table\n",
+    "\n",
     "columns = inspector.get_columns('station')\n",
     "for c in columns:\n",
     "    print(c['name'], c[\"type\"])"
@@ -597,6 +599,8 @@
     }
    ],
    "source": [
+    "# histogram\n",
+    "\n",
     "plt.hist(temps_df[0], bins=12)\n",
     "plt.xlabel('Temperature')\n",
     "plt.ylabel('Frequency')\n",
